# opynfec

./: .gitignore  LICENSE  README.md  __init__.py  fec_api_wrapper.py  open_fec.py  opyn_fec.py  pyproject.toml  setup.cfg
examples/: presidential_candidates.py
opynfec/: __init__.py  api_wrapper.py
sample_data/: build_sample_datasets.py  reformat_for_nodes.py
src/opynfec/: __init__.py
tests/: test_api_wrapper.py  test_candidate  test_candidate.py  test_committee.py  test_search.py
