[metadata]
name = opynfec
version = attr: opynfec.__version__
author = Ryan Crisanti
author_email = rcrisanti@me.com
description = A wrapper for the openFEC API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marco-team/opynfec
project_urls =
    Bug Tracker = https://github.com/marco-team/opynfec/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests >= 2.26.0

[options.packages.find]
where = src